# ss-trading-bot-project

./: .gitignore  CMakeLists.txt  README.md
include/: Receiver.h  SyncClient.h
src/: main.cpp
